Reduce the search box width to avoid wrapping.

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -202,7 +202,7 @@ body {
 }
 
 #searchToolbar > input {
-  width: 220px;
+  width: 210px;
 }
 
 #searchResults {
